# PyTreeNet

./: .gitignore  .readthedocs.yaml  1d.ipynb  AH(4x4).ipynb  BH(2x2)_Lindblad.ipynb  BH(4x4).ipynb  BoseHubbard(2x2).ipynb  BoseHubbard(3x3).ipynb  BoseHubbard(4x4).ipynb  Lindblad_exact.ipynb  Notes.ipynb  Profiling.ipynb  Project.ipynb  README.md  README.rst  Richard.ipynb  TFI_1D_Qutip.py  TJM_BH.ipynb  TJM_TFI.ipynb  TJM_TFI_random.ipynb  __init__.py  find_problem.ipynb  h -u origin optimal-ttndo  open_system_bug.ipynb  open_system_optimal_ttndo.ipynb  plans.txt  project.ipynb  pyproject.toml  sample.ipynb  tdvp_profiling_data.csv  tdvp_profiling_data.pkl  tdvp_profiling_data_3.csv  tdvp_profiling_data_3X3.csv  tdvp_profiling_data_3X3.pkl  test.ipynb  test.py  test_root_at_1.hdf5  tjm.npz  todo.txt  ttn_vis.py  (+1 more)
Lattice_examples/: BoseHubbard(1D).ipynb  BoseHubbard(3x3).ipynb
TJM_results/: 56.npz  56_REDUCED.npz  mps200.npz  tree200.npz
code/: tensornode.py  tnn.py
docs/: conf.py  index.rst  requirements.txt
example_notebooks/: __init__.py  bosonic_tree_tebd.ipynb  example_BUG.ipynb  example_TTN.ipynb  example_TTNO.ipynb  example_quantum_numbers.ipynb  example_with_new_coefficients.ipynb  examples.py  tdvp_demo_large.ipynb  tdvp_mps.ipynb  tebd_mps.ipynb  test_5qubit_encoding.py  test_fast_expm.py  test_grid.ipynb  test_qr.py  thesis_main.ipynb  truncating_TTN.ipynb  using_state_diagrams.ipynb
experiments/: open_qsystem_TTNO.ipynb  plotting_bond_dimensions.ipynb  plotting_bond_dimensions_bipartite.ipynb  randomised_hamiltonian_alternative_roots.py  svd.py  (+1 more)
(+824 files in other folders)
